set deployment to prod

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,7 +3,7 @@ image: irishblockade/tcm-pipeline:latest
 pipelines:
   default:
     - step:
-        deployment: hello-world
+        deployment: production
         script: 
           - >-
              echo "Hello world"
