no master, its main

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,7 +10,7 @@ pipelines:
                echo "AWS credentials not found; skipping deployment..."; 
             elif [ -z "$BITBUCKET_BRANCH" ]; then 
                echo "Current branch not found; skipping deployment..."; 
-            elif [[ "$BITBUCKET_BRANCH" != ENV-* ]] && [[ "$BITBUCKET_BRANCH" != master ]]; then 
+            elif [[ "$BITBUCKET_BRANCH" != ENV-* ]] && [[ "$BITBUCKET_BRANCH" != main ]]; then 
                echo "Current branch does not appear to be a valid environment; skipping deployment..."; 
              else 
              runway deploy;
